--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
         # Check out the `master` branch because by default GitHub Actions checks out detached HEAD
         git checkout master
         # Install Chromium dependencies needed on Ubuntu
-        sudo apt install libgbm1 -y
+        sudo apt install libgbm1 -y chromium-codecs-ffmpeg
         # Capture the screenshots
         npm install
         node .
