--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
         git checkout master
         # Install Chromium dependencies needed on Ubuntu
         sudo apt update
-        sudo apt install libgbm1 -y chromium-codecs-ffmpeg chromium-codecs-ffmpeg-extra
+        sudo apt install libgbm1 -y chromium-codecs-ffmpeg-nonfree
         # Capture the screenshots
         npm install
         node .
