--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
         sudo apt update
         sudo apt install libgbm1 ffmpeg -y
         # Install ffmpeg to convert MP4 to VP9
-        ffmpeg -i Big_Buck_Bunny_360_10s_10MB.mp4 -c:v libvpx-vp9 -c:a libopus Big_Buck_Bunny_360_10s_10MB.vp9.webm
+        time ffmpeg -i Big_Buck_Bunny_360_10s_10MB.mp4 -c:v libvpx-vp9 -c:a libopus Big_Buck_Bunny_360_10s_10MB.vp9.webm
         # Capture the screenshots
         npm install
         node .
