--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,14 +18,13 @@ jobs:
         git config --global user.name "Tomas Hubelbauer"
         # Check out the `master` branch because by default GitHub Actions checks out detached HEAD
         git checkout master
-        # Install Chromium dependencies needed on Ubuntu and FFMPEG for MP4 to VP9 conversion
+        # Install Chromium dependencies needed on Ubuntu
         sudo apt update
-        sudo apt install libgbm1 ffmpeg -y
-        # Install ffmpeg to convert MP4 to VP9
-        time ffmpeg -i Big_Buck_Bunny_360_10s_10MB.mp4 -c:v libvpx-vp9 -c:a libopus Big_Buck_Bunny_360_10s_10MB.vp9.webm
+        sudo apt install libgbm1 -y
         # Capture the screenshots
         npm install
-        node .
+        time node puppeteer.js
+        time node playwright.js
         # Authenticate with GitHub using the out of the box workflow integration PAT
         git remote set-url origin https://tomashubelbauer:${{secrets.GITHUB_TOKEN}}@github.com/${{github.repository}}
         # Add the screenshots to Git stage
